fix: add missing color for 2.5lb plate

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,3 +35,7 @@ input[type=number]::-webkit-outer-spin-button {
 .barbell-5 {
   background-color: #DC2626;
 }
+
+.barbell-2_5 {
+  background-color: #DEB887;
+}
